--- a/ChangeLog
+++ b/ChangeLog
@@ -31,6 +31,7 @@
 	* GWorkspace/Desktop/GWDesktopManager.m
 	* GWorkspace/Desktop/GWDesktopView.m
 	* GWorkspace/WorkspaceApplication.m
+	* Tools/thumbnailer/main.m
 	Removed TEST_ macros for conventional ones, they just waste a test instruction
 	
 2010-06-14 Riccardo Mottola <rmottola@users.sf.net>
