replaced TEST_ macros with standard macros
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@30751 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -32,6 +32,10 @@
 	* GWorkspace/Desktop/GWDesktopView.m
 	* GWorkspace/WorkspaceApplication.m
 	* Tools/thumbnailer/main.m
+	* Tools/fswatcher/fswatcher-inotify.m
+	* Tools/fswatcher/fswatcher.m
+	* Tools/lsfupdater/lsfupdater.m
+	* Tools/thumbnailer/main.m
 	Removed TEST_ macros for conventional ones, they just waste a test instruction
 	
 2010-06-14 Riccardo Mottola <rmottola@users.sf.net>
