--- a/ChangeLog
+++ b/ChangeLog
@@ -41,6 +41,15 @@
 	* Tools/ddbd/DDBDirsManager.m
 	* Operation/FileOpInfo.m
 	* Inspector/Contents.m
+	* Operation/FileOpInfo.m
+	* Inspector/TimeDateView.m
+	* Inspector/Contents.m
+	* Inspector/Tools.m
+	* Inspector/Inspector.m
+	* Recycler/Dialogs/StartAppWin.m
+	* Recycler/RecyclerView.m
+	* Recycler/Preferences/RecyclerPrefs.m
+	* Recycler/RecyclerIcon.m
 	Removed TEST_ macros for conventional ones, they just waste a test instruction
 	
 2010-06-14 Riccardo Mottola <rmottola@users.sf.net>
