Header import clean up and TEST macro elimination.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@30779 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2010-06-18 Riccardo Mottola
+
+	* DBKit/DBKVarLenRecordsFile.m
+	* DBKit/DBKBTree.m
+	* FSNode/FSNBrowserCell.m
+	* FSNode/FSNPathComponentsViewer.m
+	* FSNode/FSNBrowserColumn.m
+	* FSNode/FSNListView.m
+	* FSNode/FSNIconsView.m
+	* FSNode/FSNodeRep.m
+	* FSNode/FSNBrowser.m
+	* FSNode/FSNTextCell.m
+	* FSNode/FSNIcon.m
+	* FSNode/FSNBrowserScroll.m
+	* FSNode/FSNode.m
+	Header import clean up and TEST macro elimination.
+
 2010-06-16 Riccardo Mottola <rmottola@users.sf.net>
 
 	* Operation\FileOpInfo.m
