substitute TEST_ macros with standard ones
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@30781 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,8 @@
 	* FSNode/FSNIcon.m
 	* FSNode/FSNBrowserScroll.m
 	* FSNode/FSNode.m
+	* GWorkspace/GWorkspace.m
+	* Inspector/Attributes.m
 	Header import clean up and TEST macro elimination.
 
 2010-06-16 Riccardo Mottola <rmottola@users.sf.net>
