--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-06-21 Riccardo Mottola
+
+	* Operation/Operation.m
+	Fix spelling error.
+
 2010-06-18 Riccardo Mottola
 
 	* DBKit/DBKVarLenRecordsFile.m
