--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-06-22  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* GWMetadata/gmds/aclocal.m4: Attempt to pass correct flags in to
+	build test by using 'gnustep-config'.
+
 2010-06-21 Riccardo Mottola
 
 	* Operation/Operation.m
