yet another aclocal.m4 update
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@30816 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2010-06-22  Richard Frith-Macdonald <rfm@gnu.org>
 
+	* Inspector/aclocal.m4:
+	* GWMetadata/gmds/mdextractor/Extractors/aclocal.m4:
 	* GWMetadata/gmds/aclocal.m4: Attempt to pass correct flags in to
 	build test by using 'gnustep-config'.
 
