--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-06-28 Riccardo Mottola <rmottola@users.sf.net>
+
+	* FSNode/FSNBrowserColumn.m
+	Do not call size adjusting if the scroller is still nil.
+	Should also fix SPARC.
+	
 2010-06-22  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Inspector/aclocal.m4:
