--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,14 @@
+2010-07-05 Riccardo Mottola
+
+	* GWorkspace/GWorkspace.m
+	* Tools/ddbd/ddbd.m : attempt to shutdown automatically
+
 2010-06-28 Riccardo Mottola <rmottola@users.sf.net>
 
 	* FSNode/FSNBrowserColumn.m
 	Do not call size adjusting if the scroller is still nil.
 	Should also fix SPARC.
-	
+
 2010-06-22  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Inspector/aclocal.m4:
