configure all subprojects, fix imports
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@30931 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2010-07-06 Riccardo Mottola
+
+	* GWMetadata/configure.ac
+	* GWMetadata/configure
+	Configure all subprojects
+
+	* GWMetadata/gmds/mdextractor/updater.m
+	* GWMetadata/gmds/mdextractor/mdextractor.m
+	* GWMetadata/Preferences/MDIndexing.m
+	* GWMetadata/Preferences/MDIndexing.h
+	Fix imports.
+	
 2010-07-05 Riccardo Mottola
 
 	* GWorkspace/GWorkspace.m
