cleaned up headers
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@31049 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2010-07-29 Riccardo Mottola <rmottola@users.sf.net>
 
 	* GWMetadata/MDKit/MDKQueryManager.m
+	* GWMetadata/gmds/mdextractor/mdextractor.m
 	Cleaned up headers.
 
 2010-07-14 Riccardo Mottola <rmottola@users.sf.net>
