Implement an Open in Workspace service command.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@31104 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-08-09  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* GWorkspace/GWorkspaceInfo.plist:
+	* GWorkspace/GWorkspace.m (-applicationDidFinishLaunching:,
+	-openInWorkspace:userData:error:):
+	Implement an Open in Workspace service command.
+
 2010-07-31  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* GWorkspace/Fiend/FiendLeaf.m (-mouseDown:): Don't order fiend
