implement opening of webloc files
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@31511 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-10-13 Riccardo Mottola
+
+	* GWorkspace/GWorkspaceInfo.plist,
+	* GWorkspace/GWorkspace.m;
+	Implement opening of webloc files.
+
 2010-08-09  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* GWorkspace/GWorkspaceInfo.plist:
