--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-10-15 Riccardo Mottola
+
+	* Operation/FileOpInfo.m
+	* Operation/Operation.m
+	Destroy operation uses source and not destination.
+
 2010-10-13 Riccardo Mottola
 
 	* GWorkspace/GWorkspaceInfo.plist,
