--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-10-19  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Operation/FileOpInfo.m (-dealloc): Remove incorrect release of
+	the progress indicator, which is not owned by the FileOpInfo
+	instance.
+
 2010-10-15 Riccardo Mottola
 
 	* Operation/FileOpInfo.m
