if there is no destination for the recycle operation get the trash path
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@31547 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-10-21 Riccardo Mottola
+
+	* GWorkspace/GWorkspace.m
+	* GWorkspace/WorkspaceApplication.m
+	If there is no destination for the Recycle operation, get the trash path.
+	
 2010-10-20 Riccardo Mottola
 
 	* Operation/FileOpInfo.m
