Support double clicks in the shelf of a GWorkspace file viewer.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@31559 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,17 @@
+2010-10-25  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* GWorkspace/FileViewer/GWViewerShelf.h:
+	* GWorkspace/FileViewer/GWViewerShelf.m (-openSelectionInNewViewer):
+	Implement method so that double clicking an application or file
+	icon in the shelf opens the corresponding application.
+
 2010-10-21 Riccardo Mottola
 
 	* GWorkspace/GWorkspace.m
 	* GWorkspace/WorkspaceApplication.m
-	If there is no destination for the Recycle operation, get the trash path.
-	
+	If there is no destination for the Recycle operation, get the
+	trash path.
+
 2010-10-20 Riccardo Mottola
 
 	* Operation/FileOpInfo.m
