--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-11-11 Wolfgang Lux
+
+	* FSNode/FSNodeRepIcons.m
+	Quick hack to display different folder icons
+
 2010-10-25  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* GWorkspace/FileViewer/GWViewerShelf.h:
