minor code cleanup
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@31716 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-12-07 Riccardo Mottola
+
+	* GWorkspace/WorkspaceApplication.m:
+	Minor code cleanup.
+
 2010-11-11 Wolfgang Lux
 
 	* FSNode/FSNodeRepIcons.m
