Do not read icons handled by NSWorkspace; some reformatting.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@31768 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-12-24 Riccardo Mottola
+
+	* FSNode/FSNodeRepIcons.m
+	Do not read icons handled by NSWorkspace; some reformatting.
+
 2010-12-07 Riccardo Mottola
 
 	* GWorkspace/WorkspaceApplication.m:
