Mount parsing code rewrite for more portability. Still unfinished
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@31947 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-01-25 Riccardo Mottola <rm@gnu.org>
+
+	*  FSNode/FSNodeRep.m
+	Mount parsing code rewrite for more portability. Still unfinished.
+
 2011-01-12 Riccardo Mottola <rm@gnu.org>
 
 	*  FSNode/FSNodeRep.m
