--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-01-26 Riccardo Mottola <rm@gnu.org>
+
+	*  FSNode/FSNodeRep.m
+	Fix FreeBSD type parsing, cleanup.
+
 2011-01-25 Riccardo Mottola <rm@gnu.org>
 
 	*  FSNode/FSNodeRep.m
