Switch checking of volumes to getmntinfo() and keep only /etc/mtab asl fallback.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@31958 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-01-27 Riccardo Mottola <rm@gnu.org>
+
+	*  FSNode/FSNodeRep.m
+	Switch checking of volumes to getmntinfo() and keep only /etc/mtab asl fallback.
+
 2011-01-26 Riccardo Mottola <rm@gnu.org>
 
 	*  FSNode/FSNodeRep.m
