use MNTTAB constant
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@31991 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-02-02 Riccardo Mottola <rm@gnu.org>
+
+	*  FSNode/FSNodeRep.m
+	Use MNTAB constant.
+
 2011-01-28 Riccardo Mottola <rm@gnu.org>
 
 	*  FSNode/FSNodeRep.m
