--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,9 @@
 	* GWMetadata/MDFinder/GNUmakefile.preamble
 	Build against build version of kits, patch by Sebastian Reitenbach
 
+	* GWMetadata/MDKit/MDKQuery.m
+	Warning fix through explicit cast.
+
 2011-02-02 Riccardo Mottola <rm@gnu.org>
 
 	*  FSNode/FSNodeRep.m
