Patch by Philippe Roussell: handle empty directories correctly and invalidate associated timer
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@32386 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-02-27 Riccardo Mottola <rm@gnu.org>
+
+	* GWMetadata/gmds/mdextractor/updater.m:
+	Patch by Philippe Roussell: handle empty directories correctly
+	and invalidate associated timer.
+	
 2011-02-21 Riccardo Mottola <rm@gnu.org>
 
 	* GWMetadata/gmds/mdextractor/GNUmakefile.preamble
