--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,18 @@
+2011-02-28 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/GWorkspace.m
+	* GWorkspace/FileViewer/GWViewer.m
+	* GWorkspace/FileViewer/GWSpatialViewer.m
+	* GWorkspace/Desktop/GWDesktopManager.m
+	* GWMetadata/MDFinder/MDFinder.m
+	Replace sel_eq with sel_isEqual
+
 2011-02-27 Riccardo Mottola <rm@gnu.org>
 
 	* GWMetadata/gmds/mdextractor/updater.m:
 	Patch by Philippe Roussell: handle empty directories correctly
 	and invalidate associated timer.
-	
+
 2011-02-21 Riccardo Mottola <rm@gnu.org>
 
 	* GWMetadata/gmds/mdextractor/GNUmakefile.preamble
