de-comment sound playing
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@32532 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-03-11 Riccardo Mottola <rm@gnu.org
+
+	* Inspector/ContentViewers/SoundViewer/SoundViewer.m
+	De-comment sound playing
+	
 2011-02-28 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/GWorkspace.m
