Patch by Philippe to use default font size instead of fixed 12.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@32675 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,16 @@
-2011-03-15 Riccardo Mottola <rm@gnu.org
+2011-03-21 Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNBrowser.h
+	* FSNode/FSNBrowser.m
+
+	Patch by Philippe to use default font size instead of fixed 12.
+
+2011-03-15 Riccardo Mottola <rm@gnu.org>
 
 	* Inspector/ContentViewers/SoundViewer/SoundViewer.m:
 	Patch by Philippe to stop progress after playing ends.
 
-2011-03-11 Riccardo Mottola <rm@gnu.org
+2011-03-11 Riccardo Mottola <rm@gnu.org>
 
 	* Inspector/ContentViewers/SoundViewer/SoundViewer.m
 	De-comment sound playing
