--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-05-20 Sebastian Reitenbach
+
+	* GWMetadata/MDKit/SQLite.h
+	* GWMetadata/gmds/gmds/sqlite.h
+	fix build with gcc-2.95
+
 2011-05-10 Riccardo Mottola for Sebastian Reitenbach
 
 	* GWMetadata/gmds/mdfind/GNUmakefile.in
