--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-05-21 Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNIcon.m
+	Fix drag into dock by using NSDragOperationEvery
+
 2011-05-20 Sebastian Reitenbach
 
 	* GWMetadata/MDKit/SQLite.h
