use string for key in dictionary
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@33084 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-05-22 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Desktop/Dock/Dock.m
+	Fix bug found by Sebastian: use string for key.
+
 2011-05-21 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNIcon.m
