* GWorkspace/TShelf/TShelfIcon.m (-drawRect:): Round the drawing coordinates for the shelf icon. Don't use the dirty rect parameter to position the icon
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@33396 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-06-27  Eric Wasylishen  <ewasylishen@gmail.com>
+
+	* GWorkspace/TShelf/TShelfIcon.m (-drawRect:):
+	Round the drawing coordinates for the shelf icon.
+	Don't use the dirty rect parameter to position the icon.
+
 2011-05-23 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNListView.m
