fixed rounding of position
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@33683 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-08-02 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Desktop/Dock/DockIcon.m
+	Fixed rounding of position.
+
 2011-06-27  Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* GWorkspace/TShelf/TShelfIcon.m (-drawRect:):
