--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-01-10  Eric Wasylishen  <ewasylishen@gmail.com>
+
+	* FSNode/FSNIconsView.m (-mouseDragged:): Rewrite selection
+	rect drawing.
+
 2011-11-04  Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* GWorkspace/Preferences/PrefController.h: specify type of
