* FSNode/FSNBrowserCell.m: Enable browser icons
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@34510 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-01-12  Eric Wasylishen  <ewasylishen@gmail.com>
+
+	* FSNode/FSNBrowserCell.m: Enable browser icons
+
 2012-01-10  Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* FSNode/FSNIconsView.m (-mouseDragged:): Rewrite selection
