* GWorkspace/Desktop/GWDesktopView.m (-mouseDragged:): Copy selection rect rewrite from FSNode/FSNIconsView.m
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@34525 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-01-14  Eric Wasylishen  <ewasylishen@gmail.com>
+
+	* GWorkspace/Desktop/GWDesktopView.m (-mouseDragged:):
+	Copy selection rect rewrite from FSNode/FSNIconsView.m
+
 2012-01-12  Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* FSNode/FSNBrowserCell.m: Enable browser icons
