--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2012-01-15  Eric Wasylishen  <ewasylishen@gmail.com>
+
+	* GWorkspace/Preferences/DesktopPref.m:
+	* GWorkspace/Preferences/DesktopPref.h:
+	* GWorkspace/Resources/English.lproj/DesktopPref.gorm:
+	Redesign desktop background UI
+
 2012-01-14  Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* GWorkspace/Desktop/GWDesktopView.m (-mouseDragged:):
