--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-01-31  Eric Wasylishen  <ewasylishen@gmail.com>
+
+	* FSNode/FSNListView.m: Rewrite some code broken by NSNotFound
+	type change
+
 2012-01-15  Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* GWorkspace/Preferences/DesktopPref.m:
