Really transparent dock
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@34765 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2012-01-16 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Desktop/Dock/Dock.h
+	* GWorkspace/Desktop/Dock/Dock.m
+	* GWorkspace/Desktop/GWDesktopView.m
+	Really transparent Dock
+
 2012-01-31  Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* FSNode/FSNListView.m: Rewrite some code broken by NSNotFound
