* GWorkspace/Desktop/GWDesktopView.m: * GWorkspace/Desktop/Dock/Dock.m: Dont' set the dock background colour based on the desktop background colour; leave it alone as [[NSColor grayColor] colorWithAlphaComponent: 0.33].
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@34766 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2012-02-16 Eric Wasylishen  <ewasylishen@gmail.com>
+
+	* GWorkspace/Desktop/GWDesktopView.m:
+	* GWorkspace/Desktop/Dock/Dock.m: Dont' set the dock background
+	colour based on the desktop background colour; leave it alone as
+	[[NSColor grayColor] colorWithAlphaComponent: 0.33].
+
 2012-01-16 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Desktop/Dock/Dock.h
