Always convert to RGB color space before exctracting RGB components (fixes crash/exception on close with grey backs)
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@34799 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-02-20 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Desktop/GWDesktopView.m:
+	Always convert to RGB color space before exctracting
+	RGB components (fixes crash/exception on close with grey backs)
+
 2012-02-16 Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* GWorkspace/Desktop/GWDesktopView.m:
