New dock style preference and conditioinally enable transparency in dock and selections based on it.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@34805 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2012-02-21 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Preferences/DesktopPref.[h,m]
+	* GWorkspace/Desktop/Dock/Dock.[h,m]
+	* GWorkspace/Desktop/GWDesktopManager.h
+	* GWorkspace/Desktop/GWDesktopView.m
+	* FSNode/FSNIconsView.[h,m]
+	* GWorkspace/Resources/English.lproj/DesktopPref.gorm
+	New dock style preference and conditioinally enable transparency
+	in dock and selections based on it.
+
 2012-02-20 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Desktop/GWDesktopView.m:
