--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-03-02 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Desktop/GWDesktopView.m
+	Highlight-rect without transparency for classic style selection.
+
 2012-02-21 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Preferences/DesktopPref.[h,m]
