* GWorkspace/Desktop/GWDesktopView.m: Draw highlight rect using NSFrameRectWithWidthUsingOperation(aRect, 1.0, GSCompositeHighlight); instead of filling the rect twice, which was much slower
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@34866 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-03-02  Eric Wasylishen <ewasylishen@gmail.com>
+
+	* GWorkspace/Desktop/GWDesktopView.m: Draw highlight rect using
+	NSFrameRectWithWidthUsingOperation(aRect, 1.0, GSCompositeHighlight);
+	instead of filling the rect twice, which was much slower
+
 2012-03-02 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Desktop/GWDesktopView.m
