* GWorkspace/Desktop/GWDesktopView.m: Don't cache scaled background. Fixes background not drawing with xlib and background set to "fit", and probably saves a fair bit of memory.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@34870 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2012-03-02  Eric Wasylishen <ewasylishen@gmail.com>
 
+	* GWorkspace/Desktop/GWDesktopView.m: Don't cache scaled background.
+	Fixes background not drawing with xlib and background set to "fit",
+	and probably saves a fair bit of memory.
+
+2012-03-02  Eric Wasylishen <ewasylishen@gmail.com>
+
 	* GWorkspace/Desktop/GWDesktopView.m: Draw highlight rect using
 	NSFrameRectWithWidthUsingOperation(aRect, 1.0, GSCompositeHighlight);
 	instead of filling the rect twice, which was much slower
