--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-03-06  Richard Stonehouse
+
+	* GWMetadata/gmds/mdextractor/GNUmakefile.preamble
+	add sqlite3 flag
+
 2012-03-02  Eric Wasylishen <ewasylishen@gmail.com>
 
 	* GWorkspace/Desktop/GWDesktopView.m: Don't cache scaled background.
