Guard against invalid page numbers.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@34955 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-03-20 Riccardo Mottola <rm@gnu.org>
+
+	* Inspector/ContentViewers/PdfViewer/PdfViewer.[h,m]
+	Guard against invalid page numbers.
+
 2012-03-06  Richard Stonehouse
 
 	* GWMetadata/gmds/mdextractor/GNUmakefile.preamble
