make next and previous buttons work
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@34958 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2012-03-20 Riccardo Mottola <rm@gnu.org>
 
+	* Inspector/ContentViewers/PdfViewer/PdfViewer.m
+	Make next and previous buttons work.
+
+2012-03-20 Riccardo Mottola <rm@gnu.org>
+
 	* Inspector/ContentViewers/PdfViewer/PdfViewer.[h,m]
 	Guard against invalid page numbers.
 
