* FSNode/FSNIconsView.m: Fix XOR-stlye selection rectangle. Now works when scrolling.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@34977 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-03-22  Eric Wasylishen <ewasylishen@gmail.com>
+
+	* FSNode/FSNIconsView.m: Fix XOR-stlye selection rectangle. Now
+	works when scrolling.
+
 2012-03-20 Riccardo Mottola <rm@gnu.org>
 
 	* Inspector/ContentViewers/PdfViewer/PdfViewer.m
