* FSNode/FSNTextCell.h: * FSNode/FSNTextCell.m: Vertically center labels. Fixes bug 35423
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@34978 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2012-03-22  Eric Wasylishen <ewasylishen@gmail.com>
 
+	* FSNode/FSNTextCell.h:
+	* FSNode/FSNTextCell.m: Vertically center labels. Fixes bug 35423
+
+2012-03-22  Eric Wasylishen <ewasylishen@gmail.com>
+
 	* FSNode/FSNIconsView.m: Fix XOR-stlye selection rectangle. Now
 	works when scrolling.
 
