* FSNode/FSNListView.h: * FSNode/FSNListView.m: Fix double-click and single-click on list rows. Single-click on a selected row only starts editing after a short interval (0.5s); double-clicking opens the double-clicked item.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@34980 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2012-03-22  Eric Wasylishen <ewasylishen@gmail.com>
 
+	* FSNode/FSNListView.h:
+	* FSNode/FSNListView.m: Fix double-click and single-click on
+	list rows. Single-click on a selected row only starts editing
+	after a short interval (0.5s); double-clicking opens the
+	double-clicked item.
+
+2012-03-22  Eric Wasylishen <ewasylishen@gmail.com>
+
 	* FSNode/FSNIconsView.m:
 	* GWorkspace/Desktop/GWDesktopView.m: XOR selection rect:
 	Add fallback code path for running on versions of GUI older than
