* FSNode/FSNTextCell.m: Vertically center labels including those with no icon.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@34982 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2012-03-22  Eric Wasylishen <ewasylishen@gmail.com>
 
+	* FSNode/FSNTextCell.m: Vertically center labels including those
+	with no icon.
+
+2012-03-22  Eric Wasylishen <ewasylishen@gmail.com>
+
 	* FSNode/FSNListView.h:
 	* FSNode/FSNListView.m: Fix double-click and single-click on
 	list rows. Single-click on a selected row only starts editing
