* FSNode/FSNTextCell.m: Adjust vertically centering to match calculation in  -[FSNListViewDataSource(RepNameEditing) setEditorAtRow:withMouseDownEvent:]
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@34997 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2012-03-22  Eric Wasylishen <ewasylishen@gmail.com>
 
+	* FSNode/FSNTextCell.m: Adjust vertically centering to match
+	calculation in  -[FSNListViewDataSource(RepNameEditing)
+	setEditorAtRow:withMouseDownEvent:]
+
+2012-03-22  Eric Wasylishen <ewasylishen@gmail.com>
+
 	* FSNode/FSNTextCell.m: Vertically center labels including those
 	with no icon.
 
