* GWorkspace/FileViewer/GWViewerShelf.m: Use FSNTextCell for focusedIconLabel to correct alignment problem introduced in the last change.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@34998 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
-2012-03-22  Eric Wasylishen <ewasylishen@gmail.com>
+2012-03-26  Eric Wasylishen <ewasylishen@gmail.com>
+
+	* GWorkspace/FileViewer/GWViewerShelf.m: Use FSNTextCell for
+	focusedIconLabel to correct alignment problem introduced in the
+	last change.
+
+2012-03-26  Eric Wasylishen <ewasylishen@gmail.com>
 
 	* FSNode/FSNTextCell.m: Adjust vertically centering to match
 	calculation in  -[FSNListViewDataSource(RepNameEditing)
