New desktop background style, uniform scale
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@35056 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2012-04-11 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Preferences/DesktopPref.m
+	* GWorkspace/Desktop/GWDesktopView.h
+	* GWorkspace/Desktop/GWDesktopView.m
+	* GWorkspace/Resources/English.lproj/DesktopPref.gorm
+	New desktop background style, uniform scale
+
 2012-03-28 Riccardo Mottola
 
 	* GWorkspace/FileViewer/GWViewerIconsView.m
