NSUInteger for indexes
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@35075 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,10 @@
 	* GWMetadata/MDKit/MDKQuery.m
 	Change indexes to NSUInteger and other minor cleanups.
 
+	* GWorkspace/TShelf/TShelfView.m
+	* GWorkspace/TShelf/TShelfView.h
+	NSUInteger for indexes.
+
 2012-04-11 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Preferences/DesktopPref.m
