declare types to fix warnings
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@35082 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,9 @@
 	* GWorkspace/TShelf/TShelfView.h
 	NSUInteger for indexes.
 
+	* GWorkspace/Finder/LiveSearch/LSFolder.h
+	Declare types to fix warnings.
+
 2012-04-11 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Preferences/DesktopPref.m
