--- a/GWorkspace/Resources/Italian.lproj/Localizable.strings
+++ b/GWorkspace/Resources/Italian.lproj/Localizable.strings
@@ -33,17 +33,17 @@
 		"Attributes" = "Attributi";
 		"Contents" = "Contenuto";
 		"Tools" = "Strumenti";	
-		"Permissions" = "Permissioni";	
+		"Permissions" = "Permessi";	
 	"Finder" = "Finder";
 	"Processes..." = "Processi...";
 	"Fiend" = "Fiend";
 		"Show Fiend" = "Mostra il Fiend";
 		"Hide Fiend" = "Nascondi il Fiend";
-		"Add Layer..." = "Aggiungi un Layer...";
-		"Remove Current Layer" = "Rimuovi il Layer corrente";
-		"Rename Current Layer" = "Rinomina il Layer corrente";
-		"Layers" = "Layers";
-	"DeskTop Shelf" = "DeskTop Shelf";	
+		"Add Layer..." = "Aggiungi un Livello...";
+		"Remove Current Layer" = "Rimuovi il Livello corrente";
+		"Rename Current Layer" = "Rinomina il Livello corrente";
+		"Layers" = "Livelli";
+	"DeskTop Shelf" = "Scaffale Scrivania";	
 	"XTerm" = "XTerm";
 	
 "Windows" = "Finestre";
@@ -75,29 +75,29 @@
 "OK" = "OK";
 "Cancel" = "Annulla";
 "Move" = "Muovi";
-"Move from: " = "Muovo da: ";
+"Move from: " = "Spostare da: ";
 "\nto: " = "\na: ";
 "Copy" = "Copia";
-"Copy from: " = "Copio da: ";
+"Copy from: " = "Copiare da: ";
 "Link" = "Collega";
 "Link " = "Collega ";
 "Delete" = "Cancella";
-"Delete the selected objects?" = "Cancello gli oggetti selezionati?";
+"Delete the selected objects?" = "Cancellare gli oggetti selezionati?";
 "Duplicate" = "Duplica";
-"Duplicate the selected objects?" = "Duplico gli oggetti selezionati?";
+"Duplicate the selected objects?" = "Duplicare gli oggetti selezionati?";
 "From:" = "Da:";
 "To:" = "A:";
 "In:" = "In:";
 "Stop" = "Stop";
 "Pause" = "Pausa";
-"Moving" = "Muovo";
-"Copying" = "Copio";
-"Linking" = "Collego";
-"Duplicating" = "Duplico";
-"Destroying" = "Cancello";
+"Moving" = "Sposta";
+"Copying" = "Copia";
+"Linking" = "Collega";
+"Duplicating" = "Duplica";
+"Destroying" = "Cancellazione";
 "File Operation Completed" = "Operazione Terminata";
-"Backgrounder connection died!" = "La connessione con Backgrounder e caduta!";
-"Some items have the same name;\ndo you want to sobstitute them?" = "Alcuni elementi hanno lo stesso nome;\nvuoi sostituirli?";
+"Backgrounder connection died!" = "La connessione con Backgrounder è terminata!";
+"Some items have the same name;\ndo you want to sobstitute them?" = "Alcuni elementi hanno lo stesso nome;\nSostituirli?";
 "Error" = "Errore";
 "File Operation Error!" = "Errore nell'operazione sui files!";
 
